# XenonVk

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  compile.sh  first_app.cpp  first_app.h  first_app.hpp  lge_device.cpp  lge_device.h  lge_device.hpp  lge_game_object.cpp  lge_game_object.hpp  lge_model.cpp  lge_model.hpp  lge_pipeline.cpp  lge_pipeline.h  lge_pipeline.hpp  lge_renderer.cpp  lge_renderer.hpp  lge_swap_chain.cpp  lge_swap_chain.hpp  lge_window.cpp  lge_window.h  lge_window.hpp  little-game-engine.code-workspace  main.cpp  readme.md  run.sh  simple_render_system.cpp  simple_render_system.hpp
.github/workflows/: cmake-build-multi.yml  cmake-build-win-linux.yml  cmake-single-platform.yml  ubuntu.build.yml  windows.build.yml
CMake/: autoconfig-dependencies.cmake  autoconfig-deps.cmake  find-glfw3.cmake  find-glm.cmake  find-imgui.cmake  precompile-shaders.cmake  xev-include.cmake
Demo/: CMakeLists.txt  demo.cpp  demo.hpp
Engine/: CMakeLists.txt  app_interface.hpp
Engine/Components/: collision.hpp  components.cpp  controller.hpp  physics.hpp
Engine/Core/: actor.hpp  entity_manager.hpp  time_manager.hpp  xev_alias.hpp
Engine/Math/: particle.hpp
Example/: CMakeLists.txt  demo.cpp  demo.hpp  main.cpp
Source/: CMakeLists.txt  app_interface.hpp  engine.hpp
Source/Components/: AABB.hpp  components.hpp  controller.cpp
Source/Core/: actor_manager.hpp  time_manager.hpp
Source/Math/: math_utils.hpp  primitive2.hpp
Source/Renderer/: vk_descriptors.hpp  vk_device.cpp  vk_device.hpp  vk_frame_info.hpp  vk_imgui.cpp  vk_imgui.hpp  vk_swap_chain.cpp  vk_window.cpp  vk_window.hpp
Source/Renderer/Systems/: basic_render_system.cpp  basic_render_system.hpp  point_light_system.cpp  point_light_system.hpp  render_system_interface.hpp
Source/Shaders/: wireframe.frag  wireframe.vert
cmake/: compile_shaders.cmake  include_core.cmake  include_lge2d.cmake  include_lge3d.cmake  include_vke.cmake  include_xev.cmake
examples/demo2/: CMakeLists.txt  first_app.cpp  first_app.hpp  main.cpp
examples/demo3/: CMakeLists.txt  first_app.cpp  first_app.hpp
examples/lge2d/: CMakeLists.txt  first_app.cpp  first_app.hpp
include/Core/: ECS.cpp  (+2 more)
lge/: CMakeLists.txt  first_app.cpp  first_app.hpp  lge_camera.hpp  lge_device.hpp  lge_frame_info.hpp  lge_game_object.cpp  lge_game_object.hpp  lge_model.cpp  lge_model.hpp  lge_pipeline.cpp  lge_pipeline.hpp  lge_renderer.cpp  lge_swap_chain.hpp  lge_utils.hpp  lge_window.hpp  simple_render_system.cpp  simple_render_system.hpp
lge/shaders/: CMakeLists.txt  point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
lge/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.hpp
lge2d/: CMakeLists.txt  lge_model.cpp  lge_pipeline.cpp  lge_pipeline.hpp  lge_swap_chain.hpp  lge_window.hpp  simple_render_system.cpp  simple_render_system.hpp
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: CMakeLists.txt  first_app.cpp  first_app.hpp  global_alias.hpp  kbd_controller.cpp  kbd_controller.hpp  lge_buffer.cpp  lge_buffer.hpp  lge_camera.cpp  lge_camera.hpp  lge_descriptors.cpp  lge_device.cpp  lge_device.hpp  lge_frame_info.hpp  lge_game_object.cpp  lge_game_object.hpp  lge_model.cpp  lge_model.hpp  lge_pipeline.cpp  lge_pipeline.hpp  lge_renderer.cpp  lge_renderer.hpp  lge_swap_chain.cpp  lge_swap_chain.hpp  lge_window.cpp  lge_window.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp
src/LGE2D/: CMakeLists.txt  first_app.cpp  first_app.hpp  lge_device.cpp  lge_device.hpp  lge_game_object.hpp  lge_model.hpp  lge_renderer.cpp  lge_renderer.hpp  lge_swap_chain.cpp  lge_window.cpp  main.cpp
src/common/: primitive.hpp  time_manager.hpp  vk_game_object.cpp  vk_game_object.hpp
src/core/: components.hpp  entity_manager.hpp  game_object_manager.hpp  vk_game_object.hpp
src/lge2d/: CMakeLists.txt  first_app.cpp  first_app.hpp  lge_device.cpp  lge_device.hpp  lge_game_object.hpp  lge_model.cpp  lge_model.hpp  lge_pipeline.cpp  lge_pipeline.hpp  lge_renderer.cpp  lge_renderer.hpp  lge_swap_chain.cpp  lge_swap_chain.hpp  lge_window.cpp  lge_window.hpp  simple_render_system.cpp  simple_render_system.hpp
src/lge2d/shaders/: CMakeLists.txt  simple_shader.frag  simple_shader.vert
src/lge3d/: kbd_controller.cpp  kbd_controller.hpp  lge_buffer.cpp  lge_buffer.hpp  lge_camera.cpp  lge_camera.hpp  lge_descriptors.cpp  lge_descriptors.hpp  lge_device.cpp  lge_device.hpp  lge_frame_info.hpp  lge_game_object.cpp  lge_game_object.hpp  lge_model.cpp  lge_model.hpp  lge_pipeline.cpp  lge_pipeline.hpp  lge_renderer.cpp  lge_renderer.hpp  lge_swap_chain.cpp  lge_swap_chain.hpp  lge_utils.hpp  lge_window.cpp  lge_window.hpp
src/lge3d/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/math/: geometry.hpp  math_utils.hpp  particle.hpp  primitive2.hpp  xev_math.hpp
src/physics/: AABB.hpp  collision.hpp  mechanics.cpp  mechanics.hpp  physics.hpp  rigid_body.hpp  soft_body.hpp
src/primitive/: primitive.hpp  vk_game_object.hpp
src/renderer/: vk_buffer.hpp  vk_camera.hpp  vk_descriptors.hpp  vk_device.cpp  vk_device.hpp  vk_frame_info.hpp  vk_model.cpp  vk_model.hpp  vk_renderer.hpp  vk_swap_chain.cpp  vk_window.cpp  vk_window.hpp  xev_controller.cpp  xev_controller.hpp
src/renderer/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.cpp  simple_render_system.hpp
src/shaders/: CMakeLists.txt  compile_shaders.cmake  simple_shader.frag  simple_shader.vert
src/vulkanEngine/: kbd_controller.cpp  kbd_controller.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_camera.cpp  vk_camera.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_device.cpp  vk_device.hpp  vk_frame_info.hpp  vk_game_object.hpp  vk_model.cpp  vk_model.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_swap_chain.hpp  vk_utils.hpp  vk_window.cpp  vk_window.hpp  xev_controller.hpp
src/vulkanEngine/systems/: point_light_system.cpp  point_light_system.hpp  simple_render_system.hpp
(+42 files in other folders)
